--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ dependencies {
     testImplementation 'io.rest-assured:rest-assured:5.5.0'
     compileOnly 'org.projectlombok:lombok:1.18.30'
     implementation group: 'com.github.javafaker', name: 'javafaker', version: '1.0.2'
+    implementation group: 'org.json', name: 'json', version: '20240303'
 }
 
 test {
